--- a/src/index.css
+++ b/src/index.css
@@ -34,3 +34,10 @@ body {
     line-height: normal;
   }
 }
+
+
+.card-image {
+  max-width: 100%;
+  height: 100%  !important;
+  width: 350px !important;
+} 
